unpackaged/main/default/objects/Lead/fields/No_of_Users__c.field-meta.xml
<CustomField>
    <fullName>No_of_Users__c</fullName>
    <label>No. of Users</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>