unpackaged/main/default/objects/Lead/fields/Number_of_vehicles__c.field-meta.xml
<CustomField>
    <fullName>Number_of_vehicles__c</fullName>
    <label>No. of vehicles</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>