unpackaged/main/default/objects/Lead/fields/OP_OD__c.field-meta.xml
<CustomField>
    <fullName>OP_OD__c</fullName>
    <label>OP/OD</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>On Premise</fullName>
            </value>
            <value>
                <fullName>On Demand</fullName>
            </value>
            <value>
                <fullName>To be defined</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>