unpackaged/main/default/objects/Lead/fields/Oppy_converted_from_Lead__c.field-meta.xml
<CustomField>
    <fullName>Oppy_converted_from_Lead__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Oppy converted from Lead</label>
    <type>Checkbox</type>
</CustomField>