unpackaged/main/default/objects/Lead/fields/Outreach_Current_Sequence_Step_Type__c.field-meta.xml
<CustomField>
    <fullName>Outreach_Current_Sequence_Step_Type__c</fullName>
    <label>Current Sequence Step Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>