unpackaged/main/default/objects/Lead/fields/P_Center_Freeze_90_Days__c.field-meta.xml
<CustomField>
    <fullName>P_Center_Freeze_90_Days__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Opt In Freeze 90 Days</label>
    <type>Checkbox</type>
</CustomField>