unpackaged/main/default/objects/Lead/fields/P_Center_News_CPA_Update__c.field-meta.xml
<CustomField>
    <fullName>P_Center_News_CPA_Update__c</fullName>
    <label>Opt In News CPA Update</label>
    <type>Date</type>
</CustomField>