unpackaged/main/default/objects/Lead/fields/P_Center_News_Finance_Update__c.field-meta.xml
<CustomField>
    <fullName>P_Center_News_Finance_Update__c</fullName>
    <label>Opt In News Finance Update</label>
    <type>Date</type>
</CustomField>