unpackaged/main/default/objects/Lead/fields/P_Center_News_Retail__c.field-meta.xml
<CustomField>
    <fullName>P_Center_News_Retail__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Opt In News Retail</label>
    <type>Checkbox</type>
</CustomField>