unpackaged/main/default/objects/Lead/fields/P_Center_Product_Info__c.field-meta.xml
<CustomField>
    <fullName>P_Center_Product_Info__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Opt In Product Info</label>
    <type>Checkbox</type>
</CustomField>