unpackaged/main/default/objects/Lead/fields/Partner_Distributor__c.field-meta.xml
<CustomField>
    <fullName>Partner_Distributor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Identifie le nom du Partner qui va créer un Lead via le portail PRM, ou à qui on va affecter le Lead, si Account Type = Partner</description>
    <label>Partner Distributor</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>You must select a Partner Account</errorMessage>
        <filterItems>
            <field>Account.Type__c</field>
            <operation>equals</operation>
            <value>Partner</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Leads (Partner Distributor)</relationshipLabel>
    <relationshipName>Leads3</relationshipName>
    <type>Lookup</type>
</CustomField>