unpackaged/main/default/objects/Lead/fields/Partnership__c.field-meta.xml
<CustomField>
    <fullName>Partnership__c</fullName>
    <label>Partnership</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Partnership</valueSetName>
    </valueSet>
</CustomField>