unpackaged/main/default/objects/Lead/fields/Payroll_SW__c.field-meta.xml
<CustomField>
    <fullName>Payroll_SW__c</fullName>
    <label>Payroll SW</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Non-défini</fullName>
            </value>
            <value>
                <fullName>ADP</fullName>
            </value>
            <value>
                <fullName>Cador dorac</fullName>
            </value>
            <value>
                <fullName>Ciel</fullName>
            </value>
            <value>
                <fullName>EBP</fullName>
            </value>
            <value>
                <fullName>Sage</fullName>
            </value>
            <value>
                <fullName>SAP</fullName>
            </value>
            <value>
                <fullName>Silae</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>