unpackaged/main/default/objects/Lead/fields/Payslips_per_month__c.field-meta.xml
<CustomField>
    <fullName>Payslips_per_month__c</fullName>
    <label>Payslips per month</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>