unpackaged/main/default/objects/Lead/fields/Prescriber__c.field-meta.xml
<CustomField>
    <fullName>Prescriber__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Prescriber</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Leads (Prescriber)</relationshipLabel>
    <relationshipName>Leads2</relationshipName>
    <type>Lookup</type>
</CustomField>