unpackaged/main/default/objects/Lead/fields/Project_s_associated_contact_1__c.field-meta.xml
<CustomField>
    <fullName>Project_s_associated_contact_1__c</fullName>
    <label>Project's associated contact 1</label>
    <length>80</length>
    <type>Text</type>
</CustomField>