unpackaged/main/default/objects/Lead/fields/Project_s_functional_domaine_1__c.field-meta.xml
<CustomField>
    <fullName>Project_s_functional_domaine_1__c</fullName>
    <label>Project's functional domaine 1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Functional_Domaine</valueSetName>
    </valueSet>
</CustomField>