unpackaged/main/default/objects/Lead/fields/Recruitment_CurrentIS__c.field-meta.xml
<CustomField>
    <fullName>Recruitment_CurrentIS__c</fullName>
    <label>Recruitment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Value1</fullName>
            </value>
            <value>
                <fullName>Value2</fullName>
            </value>
            <value>
                <fullName>Value3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>