unpackaged/main/default/objects/Lead/fields/Reject_Cause__c.field-meta.xml
<CustomField>
    <fullName>Reject_Cause__c</fullName>
    <label>Reject Cause</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Reject_Cause</valueSetName>
    </valueSet>
</CustomField>