unpackaged/main/default/objects/Lead/fields/Retail_Segmentation__c.field-meta.xml
<CustomField>
    <fullName>Retail_Segmentation__c</fullName>
    <label>Retail Segmentation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Retail_Segmentation</valueSetName>
    </valueSet>
</CustomField>