unpackaged/main/default/objects/Lead/fields/Role_in_decision_1__c.field-meta.xml
<CustomField>
    <fullName>Role_in_decision_1__c</fullName>
    <label>Role in decision 1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Role_in_Decision</valueSetName>
    </valueSet>
</CustomField>