unpackaged/main/default/objects/Lead/fields/Service__c.field-meta.xml
<CustomField>
    <fullName>Service__c</fullName>
    <description>Controlilng field to select Fonction</description>
    <label>Service</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Service</valueSetName>
    </valueSet>
</CustomField>