unpackaged/main/default/objects/Lead/fields/TECH_Autoconvert_Lead__c.field-meta.xml
<CustomField>
    <fullName>TECH_Autoconvert_Lead__c</fullName>
    <defaultValue>false</defaultValue>
    <description>flagged when the lead is automatically converted into a contact on creation of the contact</description>
    <label>TECH Autoconvert Lead</label>
    <type>Checkbox</type>
</CustomField>