unpackaged/main/default/objects/Lead/fields/TECH_InternalComment__c.field-meta.xml
<CustomField>
    <fullName>TECH_InternalComment__c</fullName>
    <label>TECH Internal Comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>