unpackaged/main/default/objects/Lead/fields/TECH_Is_Fusion__c.field-meta.xml
<CustomField>
    <fullName>TECH_Is_Fusion__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TECH Is Fusion</label>
    <type>Checkbox</type>
</CustomField>