unpackaged/main/default/objects/Lead/fields/TECH_Lead_conversion__c.field-meta.xml
<CustomField>
    <fullName>TECH_Lead_conversion__c</fullName>
    <description>Tech field to avoid field permission trigger during lead conversion</description>
    <formula>'true'</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TECH Lead conversion</label>
    <type>Text</type>
</CustomField>