unpackaged/main/default/objects/Lead/fields/TECH_Lead_Id__c.field-meta.xml
<CustomField>
    <fullName>TECH_Lead_Id__c</fullName>
    <description>Tech Custom Field to map with Opportunity Lead Id</description>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TECH Lead Id</label>
    <type>Text</type>
</CustomField>