unpackaged/main/default/objects/Lead/fields/TECH_Marketing_Campaign_Tmp__c.field-meta.xml
<CustomField>
    <fullName>TECH_Marketing_Campaign_Tmp__c</fullName>
    <label>TECH Marketing Campaign Tmp</label>
    <length>40</length>
    <type>Text</type>
</CustomField>