unpackaged/main/default/objects/Lead/fields/TECH_Marketing_Status_Tmp__c.field-meta.xml
<CustomField>
    <fullName>TECH_Marketing_Status_Tmp__c</fullName>
    <description>Ce champ sert de tampon dans le processus de fusion des Lead par le télémarketing</description>
    <label>TECH Marketing Status Tmp</label>
    <length>255</length>
    <type>Text</type>
</CustomField>