unpackaged/main/default/objects/Lead/fields/TECH_Oppy_generated_from_lead__c.field-meta.xml
<CustomField>
    <fullName>TECH_Oppy_generated_from_lead__c</fullName>
    <formula>true</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Oppy generated from lead</label>
    <type>Checkbox</type>
</CustomField>