unpackaged/main/default/objects/Lead/fields/TECH_Owner_Profile__c.field-meta.xml
<CustomField>
    <fullName>TECH_Owner_Profile__c</fullName>
    <formula>Owner:User.Profile.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TECH Owner Profile</label>
    <type>Text</type>
</CustomField>