unpackaged/main/default/objects/Lead/fields/TECH_PB_ByPass_VR_15__c.field-meta.xml
<CustomField>
    <fullName>TECH_PB_ByPass_VR_15__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TECH PB ByPass VR 15</label>
    <type>Checkbox</type>
</CustomField>