unpackaged/main/default/objects/Lead/fields/Telemarketing_Processing_By__c.field-meta.xml
<CustomField>
    <fullName>Telemarketing_Processing_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Telemarketing Processing By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>