unpackaged/main/default/objects/Lead/fields/Telemarketing_Processing_Date__c.field-meta.xml
<CustomField>
    <fullName>Telemarketing_Processing_Date__c</fullName>
    <label>Telemarketing Processing Date</label>
    <type>Date</type>
</CustomField>