unpackaged/main/default/objects/Lead/fields/Turnover_range__c.field-meta.xml
<CustomField>
    <fullName>Turnover_range__c</fullName>
    <label>TO BE CONFIRMED Turnover range</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not disclosed</fullName>
            </value>
            <value>
                <fullName>Less than 200 k€</fullName>
            </value>
            <value>
                <fullName>200 to 500 k€</fullName>
            </value>
            <value>
                <fullName>500 to 750 k€</fullName>
            </value>
            <value>
                <fullName>750 to 1 500 k€</fullName>
            </value>
            <value>
                <fullName>1 500 to 3 000 k€</fullName>
            </value>
            <value>
                <fullName>3 000 to 6 000 k€</fullName>
            </value>
            <value>
                <fullName>6 000 to 7 500 k€</fullName>
            </value>
            <value>
                <fullName>7 500 to 15 000 k€</fullName>
            </value>
            <value>
                <fullName>15 000 to 30 000 k€</fullName>
            </value>
            <value>
                <fullName>30 000 to 45 000 k€</fullName>
            </value>
            <value>
                <fullName>45 000 to 60 000 k€</fullName>
            </value>
            <value>
                <fullName>60 000 to 75 000 k€</fullName>
            </value>
            <value>
                <fullName>75 000 to 105 000 k€</fullName>
            </value>
            <value>
                <fullName>105 000 to 150 000 k€</fullName>
            </value>
            <value>
                <fullName>150 000 to 300 000 k€</fullName>
            </value>
            <value>
                <fullName>300 000 to 400 000 k€</fullName>
            </value>
            <value>
                <fullName>400 000 to 1 000 000 k€</fullName>
            </value>
            <value>
                <fullName>Greater than 1 000 000 k€</fullName>
            </value>
            <value>
                <fullName>Without Turnover</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>