unpackaged/main/default/objects/Lead/fields/Typologie__c.field-meta.xml
<CustomField>
    <fullName>Typologie__c</fullName>
    <label>TO BE DELETED Typologie</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Client</fullName>
            </value>
            <value>
                <fullName>Prospect</fullName>
            </value>
            <value>
                <fullName>Ex Client</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>