unpackaged/main/default/objects/Lead/fields/Visibility_on_tickets__c.field-meta.xml
<CustomField>
    <fullName>Visibility_on_tickets__c</fullName>
    <label>Visibility on tickets</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>On my organization</fullName>
            </value>
            <value>
                <fullName>Restricted to my tickets</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>