unpackaged/main/default/objects/Lead/fields/Why_would_you_change__c.field-meta.xml
<CustomField>
    <fullName>Why_would_you_change__c</fullName>
    <label>Why would you change ?</label>
    <type>TextArea</type>
</CustomField>