unpackaged/main/default/objects/Lead/fields/Working_time_management_CurrentIS__c.field-meta.xml
<CustomField>
    <fullName>Working_time_management_CurrentIS__c</fullName>
    <label>Working time management</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Value 1</fullName>
            </value>
            <value>
                <fullName>Value 2</fullName>
            </value>
            <value>
                <fullName>Vaue 3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>