unpackaged/main/default/objects/Lead/validationRules/test_VR_Lead016_ImpartnerConversionBlock.validationRule-meta.xml
<ValidationRule>
    <fullName>test_VR_Lead016_ImpartnerConversionBlock</fullName>
    <active>false</active>
    <errorConditionFormula>AND( NOT( $User.BypassVR__c),
!PRIORVALUE(IsConverted),
IsConverted,
Owner:User.LastName = 'Impartner',
Owner:User.FirstName = 'Impartner',
Owner:User.MiddleName = 'Impartner'
)</errorConditionFormula>
    <errorMessage>TEST TEST</errorMessage>
</ValidationRule>