unpackaged/main/default/objects/Lead/validationRules/testB2219.validationRule-meta.xml
<ValidationRule>
    <fullName>testB2219</fullName>
    <active>false</active>
    <errorConditionFormula>AND (
NOT( $User.BypassVR__c),
NOT(INCLUDES( $User.List_of_VR_to_By_Pass__c,"VR_Lead008_NoNewLeadWithoutPermSet")),
OR ($Profile.Name = "Cegid Marketing", $Profile.Name = "Cegid Telemarketing", $Permission.PRMSalesUsers),
NOT( $Permission.Opportunity_without_lead_creation),
OR(ISNEW(), ISPICKVAL(Status, 'New'), ISPICKVAL(Status, 'In Buffer'))
)</errorConditionFormula>
    <errorMessage>TESTB2219 : "you can't create a lead with your profile"</errorMessage>
</ValidationRule>