unpackaged/main/default/objects/Lead/validationRules/Validatio_of_BusinessUnit_MQL.validationRule-meta.xml
<ValidationRule>
    <fullName>Validatio_of_BusinessUnit_MQL</fullName>
    <active>false</active>
    <errorConditionFormula>AND(ISPICKVAL(Business_Unit__c, ""),ISPICKVAL(Status ,"MQL"))</errorConditionFormula>
    <errorDisplayField>Business_Unit__c</errorDisplayField>
    <errorMessage>Business Unit is Required</errorMessage>
</ValidationRule>