unpackaged/main/default/objects/Lead/validationRules/VR0015_PRMBlockIsDealAndOwner.validationRule-meta.xml
<ValidationRule>
    <fullName>VR0015_PRMBlockIsDealAndOwner</fullName>
    <active>false</active>
    <errorConditionFormula>AND($Permission.PRMSalesUsers,
				ImpartnerPRM__IsDealRegistration__c = false,
				TECH_PB_ByPass_VR_15__c = false,
				NOT(ISCHANGED(TECH_PB_ByPass_VR_15__c)),
				OR(
								AND(
												ISCHANGED(OwnerId),
												PRIORVALUE(OwnerId) &lt;&gt;  $User.Id
								), 
								AND(
												NOT(ISCHANGED(OwnerId)),
												OwnerId  &lt;&gt;  $User.Id 
								)
				)
				)</errorConditionFormula>
    <errorMessage>This lead is not related to PRM. You don't have the necessary access rights on this record.</errorMessage>
</ValidationRule>