unpackaged/main/default/objects/Lead/validationRules/VR_Lead0016_LeadConvertion_by_SDR.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_Lead0016_LeadConvertion_by_SDR</fullName>
    <active>false</active>
    <description>SDR can convert and edit only lead only if they are owner</description>
    <errorConditionFormula>AND(
	NOT( $User.BypassVR__c),
	TECH_PB_ByPass_VR_15__c = false,
	NOT(ISCHANGED(TECH_PB_ByPass_VR_15__c)),
	NOT(INCLUDES( $User.List_of_VR_to_By_Pass__c,"VR_Lead0017_ChangeLeadowner_by_leadSourc")),
	$Permission.SDR_Lead_treatment,
	AND(
			OR(
				ISPICKVAL( LeadSource , "SDR Lead Purchase"),
				ISPICKVAL( LeadSource , "SDR-Marketing Prospecting")
			),
			NOT(ISCHANGED(OwnerId)),
			OwnerId &lt;&gt;  $User.Id 
		)
)</errorConditionFormula>
    <errorMessage>Your are not owner of this lead so you can't change it.</errorMessage>
</ValidationRule>