unpackaged/main/default/objects/Lead/validationRules/VR_Lead0017_ChangeLeadowner_by_leadSourc.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_Lead0017_ChangeLeadowner_by_leadSourc</fullName>
    <active>false</active>
    <description>SDR can't change the owner when the lead source is different of SDR lead Purchase or SDR marketing Prospecting.</description>
    <errorConditionFormula>AND(
				TECH_PB_ByPass_VR_15__c = false,
				NOT(ISCHANGED(TECH_PB_ByPass_VR_15__c)),
	NOT( $User.BypassVR__c),
	NOT(INCLUDES( $User.List_of_VR_to_By_Pass__c,"VR_Lead0017_ChangeLeadowner_by_leadSourc")),
	$Permission.SDR_Lead_treatment,
	AND(
			NOT (ISPICKVAL( LeadSource , "SDR Lead Purchase")),
			NOT (ISPICKVAL( LeadSource , "SDR-Marketing Prospecting"))
		)
)</errorConditionFormula>
    <errorDisplayField>LeadSource</errorDisplayField>
    <errorMessage>You can't change the owner when the lead source is different of SDR lead Purchase or SDR marketing Prospecting.</errorMessage>
</ValidationRule>